fixed wrong width value

--- a/src/Tools/Modal/Modal.scss
+++ b/src/Tools/Modal/Modal.scss
@@ -36,7 +36,7 @@ $screen-normal: 993px;
     margin: auto;
     padding: 4%;
     border: 1px solid #888;
-    width: 100vh;
+    width: 100%;
     //height: 95vh;
     position: relative;
     overflow-y: auto;
